- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.0 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.0

Updates:
- ImPlot: upgraded to commit 0ed6307

Breaking Changes:
- Modules:        dearpygui module is now called core
- Modules:        wrapper module is now called simple
- Line Series:    Removed "fill" keyword (use the new shade series)
- Plots:          Removed all flags in favor of keywords
- Pie Chart:      Removed "add_pie_chart"
- Pie Chart:      Removed "add_pie_chart_data"
- Pie Chart:      Removed "clear_pie_chart_data"
- Window:         For the "add_window" command, we changed start_x,start_y
                  to x_pos, y_pos
- Window:         For the "add_window" command, changed resizable keyword to no_resize
- Window:         For the "add_window" command, changed title_bar keyword to no_title_bar
- Window:         For the "add_window" command, changed movable keyword to no_move
- Images:         Removed secondary data source from images
- Listbox:        Changed "height" keyword to "num_items"
- Listbox:        "items" keyword now required
- RadioButton:    "items" keyword now required
- Combo:          "items" keyword now required
- Dummy:          "height" and "width" keyword now required
- Simple Plot:    "autoscale" keyword removed

New Commands:

- Main Window:    Added "set_main_window_pos" command #193
- Inputs:         Added "get_plot_mouse_pos" command #225
- Widgets:        Added "add_time_picker" command
- Widgets:        Added "add_date_picker" command
- Widgets:        Added "get_item_type" command
- Widgets:        Added "configure_item" command
- Widgets:        Added "get_item_configuration" command
- Widgets:        Added "add_pie_series" command
- Plots:          Added "add_shade_series" command